Version 2.?.?
 * Add support for creating and running web translator test fixtures
 * Add support for specifying connector compatibility (Gecko/IE/Chrome/Safari)
 * Compatible only with Zotero trunk!

Version 2.1.3 (June 13, 2011)
 * Include Ajax.org Cloud9 Editor (ACE)
 * Fix output for detectImport and doImport

Version 2.1.2
 * Add support for import translators

Version 2.1.1
 * Incorporate Erik's Translator Framework