@@ -131,7 +131,7 @@
 			<tabpanel flex="1" id="tabpanel-testing">
 				<vbox flex="1"><hbox><description>&scaffold.testing.description;</description></hbox>
 					<hbox flex="1">
-					<listbox id="testing-listbox" flex="1">
+					<listbox id="testing-listbox" flex="1" seltype="multiple">
 					<listhead>
 						<listheader label="&scaffold.testing.input.label;"/>
 						<listheader label="&scaffold.testing.status.label;"/>
@@ -147,8 +147,18 @@
 					<button label="&scaffold.testing.save;" tooltiptext="Save the above test definitions into the current translator, and save the translator"  oncommand="Scaffold.saveTests()"/>
 					<button label="&scaffold.testing.delete;" tooltiptext="Delete the selected tests"  oncommand="Scaffold.deleteSelectedTests()"/>
 					<button label="&scaffold.testing.run;" tooltiptext="Run the selected tests"  oncommand="Scaffold.runSelectedTests()"/>
+				</hbox>
+				<hbox>
 					<button label="&scaffold.testing.update;" tooltiptext="Update a test to match current item"  oncommand="Scaffold.updateSelectedTests()"/>
-					<button label="&scaffold.testing.new;" tooltiptext="Create a new test from the current page"  oncommand="Scaffold.newTestFromCurrent()"/>
+					<button label="&scaffold.testing.new;" tooltiptext="Create a new test from the current page"  oncommand="Scaffold.newTestFromCurrent('web')" />
+					<button label="New Import" tooltiptext="Create a new test from the current import"  oncommand="Scaffold.newTestFromCurrent('import')" />
+					<!--<button label="&scaffold.testing.new;" tooltiptext="Create a new test from the current page"  oncommand="Scaffold.newTestFromCurrent()" type="menu-button">
+						<menupopup>
+							<menuitem id="scaffold-testing-new-web" label="&scaffold.metadata.translatorType.web;" oncommand="Scaffold.newTestFromCurrent(); return false;" />
+							<menuitem id="scaffold-testing-new-import" label="&scaffold.metadata.translatorType.import;" oncommand="Scaffold.newImportTestFromCurrent(); return false;" />
+							<menuitem id="scaffold-testing-new-search" label="&scaffold.metadata.translatorType.search;" disabled="true" />
+						</menupopup> 
+					</button>-->
 				</hbox></vbox>
 			</tabpanel>
 		</tabpanels>
