@@ -51,4 +51,4 @@
 <!ENTITY scaffold.testing.delete			"Delete">
 <!ENTITY scaffold.testing.run				"Run">
 <!ENTITY scaffold.testing.update				"Update">
-<!ENTITY scaffold.testing.new				"New">
+<!ENTITY scaffold.testing.new				"New Web">
