@@ -1,7 +1,9 @@
 Version 2.?.?
- * Add support for creating and running web translator test fixtures
+ * Add support for creating and running web and import translator test fixtures
  * Add support for specifying connector compatibility (Gecko/IE/Chrome/Safari)
- * Compatible only with Zotero trunk!
+ * Relicensed under the Affero General Public License, like the Zotero main code
+ * Uses the Zotero standard of hard tabs for translators, replaces spaces with tabs
+ * Compatible only with Zotero trunk and Zotero Multilingual!
 
 Version 2.1.3 (June 13, 2011)
  * Include Ajax.org Cloud9 Editor (ACE)
